== HEAD

Features:
* #853 - `Mail::Message#set_sort_order` overrides the default message part sort order. (rafbm)

Compatibility:
* #655 - Sort attachments to the end of the parts list to work around email clients that may mistake a text attachment for the message body. (npickens)

Bugs:
* #978 - Fix for invalid chars being left in a string for invalid b_value from encoding. (kjg)
* #996 - Fix that multipart/mixed emails with a delivery-status part could be interpreted as bounces. (kjg)
* #998 - Fix header parameter parsing (such as attachment names) for values encoded with a blank charset or language code. (kjg)
* #1003 - Fix decoding some b encoded headers on specific rubies that don't account for lack of base64 padding (kjg)

== Version 2.6.4 - Wed Mar 23 08:16 -0700 2016 Jeremy Daer <jeremydaer@gmail.com>

Features:
* #772 - Normalize encoding matchers (grosser)
* #775 - Avoid failed encodings / stop bad charsets early (grosser)
* #782 – Make the gem compatible with Rubinius (robin850)
* #865 - Allow a body with an invalid encoding to be round tripped (kjg)
* #866 - Support decoding message bodies with non-Ruby-standard charsets (jeremy)
* #868 - Use the Ruby19.charset_encoder when decoding message bodies (kjg)
* #872 - Low-level option to include BCC field in the encoded message (grossadamm)
* #901 - Allow mail.text_part = '…' and mail.html_part = '<p>…</p>' (taavo)
* #924 - Matcher for having attachments (schepedw)

Performance:
* #956 - Use native String#encode for CR/LF conversion (carsonreinke)
* #970 - Support Ruby 2.3+ frozen string literals (twalpole)

Bugs:
* #719 - Fix to not extract header content that looks like its field name (kjg)
* #789 - Fix encoding collapsing not dealing with multiple encodings in 1 line (grosser)
* #808 - Mail::Field correctly responds_to? the methods of its instantiated field (thegcat)
* #849 - Handle calling Part#inline? when the Content-Disposition field couldn't be parsed (kjg)