@@ -21,58 +21,8 @@ rvm:
   - jruby-head
   - rbx-2
 
-gemfile:
-  - gemfiles/mime_types_1.16.gemfile
-  - gemfiles/mime_types_2.0.gemfile
-  - gemfiles/mime_types_2.1.gemfile
-  - gemfiles/mime_types_2.2.gemfile
-  - gemfiles/mime_types_2.3.gemfile
-  - gemfiles/mime_types_2.4.gemfile
-  - gemfiles/mime_types_2.5.gemfile
-  - gemfiles/mime_types_2.6.gemfile
-  - gemfiles/mime_types_2.6_columnar.gemfile
-  - gemfiles/mime_types_2.99.gemfile
-  - gemfiles/mime_types_3.0.gemfile
-  - gemfiles/mime_types_edge.gemfile
 
 matrix:
-  exclude:
-    - rvm: 1.8.7
-      gemfile: gemfiles/mime_types_2.0.gemfile
-    - rvm: 1.8.7
-      gemfile: gemfiles/mime_types_2.1.gemfile
-    - rvm: 1.8.7
-      gemfile: gemfiles/mime_types_2.2.gemfile
-    - rvm: 1.8.7
-      gemfile: gemfiles/mime_types_2.3.gemfile
-    - rvm: 1.8.7
-      gemfile: gemfiles/mime_types_2.4.gemfile
-    - rvm: 1.8.7
-      gemfile: gemfiles/mime_types_2.5.gemfile
-    - rvm: 1.8.7
-      gemfile: gemfiles/mime_types_2.6.gemfile
-    - rvm: 1.8.7
-      gemfile: gemfiles/mime_types_2.6_columnar.gemfile
-    - rvm: 1.8.7
-      gemfile: gemfiles/mime_types_2.99.gemfile
-    - rvm: 1.8.7
-      gemfile: gemfiles/mime_types_2.latest.gemfile
-    - rvm: 1.8.7
-      gemfile: gemfiles/mime_types_3.0.gemfile
-    - rvm: 1.8.7
-      gemfile: gemfiles/mime_types_edge.gemfile
-    - rvm: 1.9.2
-      gemfile: gemfiles/mime_types_3.0.gemfile
-    - rvm: 1.9.2
-      gemfile: gemfiles/mime_types_edge.gemfile
-    - rvm: 1.9.3
-      gemfile: gemfiles/mime_types_3.0.gemfile
-    - rvm: 1.9.3
-      gemfile: gemfiles/mime_types_edge.gemfile
-    - rvm: jruby
-      gemfile: gemfiles/mime_types_3.0.gemfile
-    - rvm: jruby
-      gemfile: gemfiles/mime_types_edge.gemfile
   allow_failures:
     - rvm: ruby-head
     - rvm: jruby-9.0.5.0
