@@ -19,11 +19,5 @@ RSpec::Core::RakeTask.new(:spec) do |t|
   t.rspec_opts = %w(--backtrace --color)
 end
 
-begin
-  require "appraisal"
-rescue LoadError, SyntaxError
-  warn "Appraisal is only available in test/development on Ruby 1.9+"
-end
-
 # load custom rake tasks
 Dir["#{File.dirname(__FILE__)}/tasks/**/*.rake"].sort.each { |ext| load ext }
