@@ -1,14 +1,0 @@
-# This file was generated by Appraisal
-
-source "https://rubygems.org"
-
-gem "jruby-openssl", :platforms => :jruby
-gem "rake", "< 11.0", :platforms => :ruby_18
-gem "rdoc", "< 4.3", :platforms => [:ruby_18, :ruby_19]
-gem "mime-types", "~> 2.3.0"
-
-group :local_development, :test do
-  gem "appraisal", "~> 1.0"
-end
-
-gemspec :path => "../"
