@@ -7,13 +7,7 @@ module Mail # :doc:
 
   require 'uri'
   require 'net/smtp'
-
-  begin
-    # Use mime/types/columnar if available, for reduced memory usage
-    require 'mime/types/columnar'
-  rescue LoadError
-    require 'mime/types'
-  end
+  require 'mini_mime'
 
   if RUBY_VERSION <= '1.8.6'
     begin
